# financial_analysis_system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev.bat  fact_sheet.md  fact_sheet_evidence_supplement.md  package-lock.json  update_fact_sheet.py
backend/: .env.example  .gitignore  alembic.ini  api-documentation.md  dev.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  start_dev.bat  start_dev.ps1  verify_cost_behavior.sql
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_audit_log.py  0003_import_jobs.py  0004_user_store_permissions.py  20260211_1011_f2d0071a8a65_add_budget_table.py  20260211_1816_a873b0a0388e_add_cost_behavior_to_expensetype_for_.py  20260211_1859_fa4199ad3467_add_soft_delete_to_expenserecord.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: audit.py  (+17 more)
backend/app/core/: config.py  database.py  deps.py  deps_deprecated.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  budget.py  expense.py  import_job.py  kpi.py  order.py  store.py  user.py  user_store.py
backend/app/schemas/: __init__.py  audit_log.py  auth.py  budget.py  common.py  comparison.py  cvp.py  dashboard.py  expense_record.py  import_job.py  kpi.py  order.py  permission.py  product_analysis.py  report.py  role.py  store.py  user_store.py
backend/app/services/: __init__.py  audit.py  audit_log_service.py  budget_service.py  comparison_service.py  cvp_service.py  dashboard_service.py  data_scope_service.py  expense_record_service.py  import_service.py  kpi_calculator.py  order_service.py  permission_service.py  product_analysis_service.py  report_service.py  role_service.py
backend/scripts/: README.md  README_BUDGET_TESTING.md  add_budget_permissions.py  add_budget_permissions.sql  add_cvp_budget_permissions.py  add_data_scope_permission.py  add_product_analysis_permission.py  clean_bulk_data.py  export_api_docs.py  generate_budget_test_data.py  generate_bulk_data.py  generate_import_test_data.py  list_users.py  seed_data.py  test_budget.bat  verify_import_feature.py
backend/scripts/maintenance/: add_audit_permission.py  add_soft_delete_columns.py  fix_audit_log_table.py  fix_detail_column.py  fix_resource_column.py  mark_migration_done.py
backend/scripts/test_data_import/: expense_records_import_test.xlsx  expense_types_import_test.xlsx  orders_import_test.xlsx  stores_import_test.csv  stores_import_test.xlsx
backend/scripts/verify/: run_all.py  verify_frontend_import.py  verify_reports.py
backend/tests/: conftest.py
(+227 files in other folders)
